Done: Connection products to shelves

--- a/src/main/resources/templates/shelfMenu.html
+++ b/src/main/resources/templates/shelfMenu.html
@@ -38,7 +38,7 @@
             <!-- Formularz do przechodzenia na shelfView-->
             <td>
                 <a class="btn btn-success"
-                   th:href="@{/shelves/view/{shelfId}(shelfId=${shelf.shelfId})}">
+                   th:href="@{/view/{shelfId}(shelfId=${shelf.shelfId})}">
                     <button>Add products</button></a>
             </td>
             <td>
