--- a/src/main/resources/templates/shoppingList.html
+++ b/src/main/resources/templates/shoppingList.html
@@ -6,6 +6,19 @@
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .btn-default {
+      background-color: yellow;
+    }
+    .btn-default:active {
+      background-color: limegreen;
+    }
+  </style>
+  <script>
+    function changeButtonColor(button) {
+      button.className = "btn btn-clicked";
+    }
+  </script>
 </head>
 
 <body>
@@ -13,7 +26,9 @@
   <h1 class="mt-5 mb-4">PANTRY</h1>
   <h2 class="mt-1 mb-1">Your product list:</h2>
   <br>
-
+  <input type="submit" value="Add product"
+         onclick="window.location='/addProductSL';" />
+  <br>
   <div class="col-md-auto">
     <table class="table table-striped">
       <thead class="thead-dark">
@@ -24,25 +39,34 @@
         <th scope="col">Action</th>
         <th scope="col">Destination</th>
 
+
+
       </tr>
       </thead>
 
-<!--  <tbody>-->
-<!--  <tr th:each="item : ${items}">-->
-<!--    <td th:text="${item.productName}"></td>-->
-<!--    <td th:text="${item.quantity}"></td>-->
-<!--    <td>-->
-<!--      <form action="#" th:action="@{/shoppingList/delete/{itemId}(itemId=${item.id})}" method="post">-->
-<!--        <input type="submit" value="Delete">-->
-<!--      </form>-->
-<!--    </td>-->
-<!--  </tr>-->
-<!--  </tbody>-->
+      <tr th:each="item: ${itemList}">
+        <td th:text="${item.getItemName()}" />
+        <td th:text="${item.getItemQuantity()}" />
+        <td>
+          <button type="button" class="btn btn-default" onclick="changeButtonColor(this)">Is it on basket?</button>
+        </td>
+        <td><form th:action="@{'/deleteProductSL/' + ${item.getShoppingItemId()}}" method="post" >
+          <input type="submit" value="Delete product"/> </form>
+        <td><form th:action="@{'/sendProduct/' + ${item.getShoppingItemId()}}" method="post" >
+
+<!--          <label for="shelf">Shelf:</label>-->
+<!--          <select id="shelf" name="shelf.shelfId" required>-->
+<!--            <option value=""></option>-->
+<!--            <option th:each="shelf : ${shelves}" th:value="${shelf.shelfId}" th:text="${shelf.shelfName}"></option>-->
+<!--          </select>-->
+          <button type="submit" class="btn btn-default">Send</button>
+        </form></td>
+          <br>
+
 
 </table>
 
-    <input type="submit" value="Add product"
-           onclick="window.location='/addProduct';" />
+
 
 </body>
 </html>
