--- a/src/main/resources/templates/shoppingList.html
+++ b/src/main/resources/templates/shoppingList.html
@@ -7,18 +7,35 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    .btn-default {
+
+    .btn-default{
+      background-color: coral;
+    }
+
+    .btn-change {
       background-color: yellow;
     }
-    .btn-default:active {
-      background-color: limegreen;
+
+    .btn-change1 {
+      background-color: indianred;
+    }
+
+    .btn-clicked {
+      background-color: greenyellow;
     }
   </style>
-  <script>
-    function changeButtonColor(button) {
-      button.className = "btn btn-clicked";
+
+  <script type="text/javascript">
+    function changeButtonColor(buttonElement) {
+      if (buttonElement.className === "btn-change") {
+        buttonElement.className = "btn-clicked";
+      } else {
+        buttonElement.className = "btn-change";
+      }
     }
   </script>
+
+
 </head>
 
 <body>
@@ -26,9 +43,12 @@
   <h1 class="mt-5 mb-4">PANTRY</h1>
   <h2 class="mt-1 mb-1">Your product list:</h2>
   <br>
-  <input type="submit" value="Add product"
+  <input type="submit" class="btn btn-outline-secondary" value="Add product"
          onclick="window.location='/addProductSL';" />
-  <br>
+  <td>
+    <a th:href="@{/}" class="btn btn-outline-warning" >Back to home</a>
+  </td>
+  <br><br>
   <div class="col-md-auto">
     <table class="table table-striped">
       <thead class="thead-dark">
@@ -37,9 +57,7 @@
         <th scope="col">Quantity</th>
         <th scope="col">Basket</th>
         <th scope="col">Action</th>
-        <th scope="col">Destination</th>
-
-
+        <th scope="col">Upload to Shelf</th>
 
       </tr>
       </thead>
@@ -48,25 +66,17 @@
         <td th:text="${item.getItemName()}" />
         <td th:text="${item.getItemQuantity()}" />
         <td>
-          <button type="button" class="btn btn-default" onclick="changeButtonColor(this)">Is it on basket?</button>
+          <button type="button" class="btn-change btn-outline-secondary" onclick="changeButtonColor(this)">In Bucket</button>
         </td>
         <td><form th:action="@{'/deleteProductSL/' + ${item.getShoppingItemId()}}" method="post" >
-          <input type="submit" value="Delete product"/> </form>
-        <td><form th:action="@{'/sendProduct/' + ${item.getShoppingItemId()}}" method="post" >
+          <input type="submit" class="btn btn-danger btn-sm" value="Delete product"/> </form>
 
-<!--          <label for="shelf">Shelf:</label>-->
-<!--          <select id="shelf" name="shelf.shelfId" required>-->
-<!--            <option value=""></option>-->
-<!--            <option th:each="shelf : ${shelves}" th:value="${shelf.shelfId}" th:text="${shelf.shelfName}"></option>-->
-<!--          </select>-->
-          <button type="submit" class="btn btn-default">Send</button>
-        </form></td>
+        <td><form th:action="@{'/sendProduct/' + ${item.getShoppingItemId()}}" method="post" >
+          <button type="submit" class="btn btn-default">Send</button></form></td>
+
           <br>
 
-
 </table>
-
-
 
 </body>
 </html>
