Done: add short description in Shelves and Shopping List

--- a/src/main/resources/templates/shoppingList/shoppingListView.html
+++ b/src/main/resources/templates/shoppingList/shoppingListView.html
@@ -38,9 +38,9 @@
 <body>
 <div class="container">
   <h1 class="mt-5 mb-4">PANTRY</h1>
-  <h2 class="mt-1 mb-1">Your product list:</h2>
-  <br>
-
+  <h2 class="mt-1 mb-1">Your Shopping List</h2>
+  <p>Just a friendly reminder: to make the most of the shopping list, make sure you've set up your shelves first and assigned products to them. </p>
+ <br>
   <input type="submit" class="btn btn-outline-secondary" value="Add product"
          onclick="window.location='/addProductSL';" />
   <td>
