--- a/src/main/resources/templates/shelves/shelfMenuView.html
+++ b/src/main/resources/templates/shelves/shelfMenuView.html
@@ -48,7 +48,7 @@
             <td>
                 <!-- Formularz do usuwania półki -->
                 <form th:action="@{/shelves/delete/{shelfId}(shelfId=${shelf.shelfId})}" method="post">
-                    <button type="submit" class="btn btn-danger btn-sm">Delete shelf</button>
+                    <button type="submit" class="btn btn-danger">Delete shelf</button>
                 </form>
             </td>
         </tr>
