--- a/src/main/resources/templates/shoppingList/addProductToShoppingListView.html
+++ b/src/main/resources/templates/shoppingList/addProductToShoppingListView.html
@@ -56,7 +56,7 @@
       </select>
 
 
-      <input type="submit" value="Add product" class="btn btn-primary btn-block">
+      <input type="submit" value="Add product" class="btn btn-success btn-block">
 
     </form>
     <br>
