--- a/src/main/resources/templates/shelves/shelfMenuView.html
+++ b/src/main/resources/templates/shelves/shelfMenuView.html
@@ -5,6 +5,12 @@
     <title>PANTRY - Shelves</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script type="text/javascript">
+        function deleteConfirm() {
+            return confirm("Are you sure you want to delete this shelf?");
+        }
+    </script>
 </head>
 <body>
 <div class="container">
@@ -47,10 +53,11 @@
             </td>
             <td>
                 <!-- Formularz do usuwania półki -->
-                <form th:action="@{/shelves/delete/{shelfId}(shelfId=${shelf.shelfId})}" method="post">
+                <form th:action="@{/shelves/delete/{shelfId}(shelfId=${shelf.shelfId})}" method="post" onsubmit="return deleteConfirm()">
                     <button type="submit" class="btn btn-danger">Delete shelf</button>
                 </form>
             </td>
+
         </tr>
         </tbody>
     </table>
