--- a/src/main/resources/templates/shelves/shelfView.html
+++ b/src/main/resources/templates/shelves/shelfView.html
@@ -5,6 +5,12 @@
     <title th:text="${shelf.shelfName}">Shelf Name</title>
     <title>Pantry</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <script type="text/javascript">
+        function deleteConfirm() {
+            return confirm("Are you sure you want to delete this product?");
+        }
+    </script>
 </head>
 <body>
 <div class="container">
@@ -44,7 +50,7 @@
                 <td th:text="${product.getExpiryDate()}" />
                 <td th:text="${product.getStatusOfProduct.getDisplayStatus()}" />
 
-                <td><form th:action="@{'/deleteProduct/' + ${product.getProductId()} + '?shelfId=' + ${shelf.shelfId}}"  method="post">
+                <td><form th:action="@{'/deleteProduct/' + ${product.getProductId()} + '?shelfId=' + ${shelf.shelfId}}"  method="post" onsubmit="return deleteConfirm()">
                     <input type="submit" class="btn btn-danger btn-sm" value="Delete product"/>
                 </form>
 
