--- a/src/main/resources/templates/products/addProductView.html
+++ b/src/main/resources/templates/products/addProductView.html
@@ -21,7 +21,14 @@
       color: red;
     }
   </style>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
 </head>
 
 <body>
@@ -70,7 +77,11 @@
       <input type="hidden" id="shelfId" name="shelfId" th:value="${shelfId}" />
 
       <input type="submit" value="Add product" class="btn btn-success btn-block">
+
     </form>
+    <br>
+    <button type="button" class="btn btn-outline-warning" onclick="goBack()">Go back</button>
+
 
   </div>
 </div>
