rename homeView into index and profileHomeView into profilesView("/profiles")

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
         <div class="col-md-4">
             <h2>Profile</h2>
             <p>Manage your profile settings, change password, and more.</p>
-            <p><a class="btn btn-secondary" href="/profileHome" role="button">View Profile »</a></p>
+            <p><a class="btn btn-secondary" href="/profiles" role="button">View Profile »</a></p>
         </div>
     </div>
     <br><br>
