Done: change shelfMenu to shelves and view to shelf

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,16 +13,12 @@
         <h1>Welcome to PANTRY</h1>
         <p class="lead">What do you choose?</p>
         <hr class="my-4">
-<!--        Stare przyciski-->
-<!--        <a href="/shelfMenu" class="btn btn-secondary mr-3 btn-lg">Shelves</a>-->
-<!--        <a href="/shoppingList" class="btn btn-secondary mr-3 btn-lg">Shopping List</a>-->
-<!--        <a href="/logout" class="btn btn-outline-dark btn-lg">Log Out</a>-->
     </div>
     <div class="row">
         <div class="col-md-4">
             <h2>Shelves</h2>
             <p>Manage your pantry's shelves. Organize your products efficiently.</p>
-            <p><a class="btn btn-secondary" href="/shelfMenu" role="button">View Shelves »</a></p>
+            <p><a class="btn btn-secondary" href="/shelves" role="button">View Shelves »</a></p>
         </div>
         <div class="col-md-4">
             <h2>Shopping List</h2>
