Done: fix images on index and profiles

--- a/src/main/resources/templates/profilesView.html
+++ b/src/main/resources/templates/profilesView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container mt-5">
   <div class="jumbotron text-center">
-    <img src="work-in-progress.jpg" alt="Prace remontowe" class="img-fluid mb-3">
+    <img src="/images/work-in-progress.jpg" width="200" alt="Prace remontowe" class="img-fluid mb-3">
     <h2>Work in progress!</h2>
     <p>We apologize for the inconvenience. We are currently working on improving this part of the service. Please be patient.</p>
     <hr class="my-4">
