--- a/src/main/resources/templates/products/addProductView.html
+++ b/src/main/resources/templates/products/addProductView.html
@@ -1,90 +1,92 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>PANTRY - add product</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      padding-top: 30px;
-    }
-    .container {
-      max-width: 500px;
-    }
-    label {
-      margin-top: 10px;
-    }
-    input[type="submit"] {
-      margin-top: 20px;
-    }
-    .error {
-      color: red;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>PANTRY - add product</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            padding-top: 30px;
+        }
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        .container {
+            max-width: 500px;
+        }
 
-  <script>
-    function goBack() {
-      window.history.back();
-    }
-  </script>
+        label {
+            margin-top: 10px;
+        }
+
+        input[type="submit"] {
+            margin-top: 20px;
+        }
+
+        .error {
+            color: red;
+        }
+    </style>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
 
 <body>
 <div class="container">
-  <div class="col-md-auto">
+    <div class="col-md-auto">
 
-    <h1 class="text-center mb-4">Add Product:</h1>
+        <h1 class="text-center mb-4">Add Product:</h1>
 
-    <form th:action="@{/addProduct}" th:object="${productModel}" method="post" class="form-group">
+        <form th:action="@{/addProduct}" th:object="${productModel}" method="post" class="form-group">
 
-      <label for="productName">Product Name:</label>
-      <input type="text" id="productName" name="productName" class="form-control" th:field="*{productName}" required>
-      <p class="error" th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}"></p>
+            <label for="productName">Product Name:</label>
+            <input type="text" id="productName" name="productName" class="form-control" th:field="*{productName}"
+                   required>
+            <p class="error" th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}"></p>
 
-      <label for="quantityOfProduct">Quantity:</label>
-      <input type="number" id="quantityOfProduct" name="quantityOfProduct" min="0" class="form-control" th:field="*{quantityOfProduct}" required>
-      <p class="error" th:if="${#fields.hasErrors('quantityOfProduct')}" th:errors="*{quantityOfProduct}"></p>
+            <label for="quantityOfProduct">Quantity:</label>
+            <input type="number" id="quantityOfProduct" name="quantityOfProduct" min="0" class="form-control"
+                   th:field="*{quantityOfProduct}" required>
+            <p class="error" th:if="${#fields.hasErrors('quantityOfProduct')}" th:errors="*{quantityOfProduct}"></p>
 
-      <label>Measurement Unit:</label>
-      <select th:field="*{measurementUnit}" class="form-control">
-        <option th:each="unit : ${measurementUnit}"
-                th:value="${unit}" th:text="${unit.displayUnit}">
-        </option>
-      </select>
-<!--      <p class="error" th:if="${#fields.hasErrors('measurementUnit')}" th:errors="*{measurementUnit}"></p>-->
+            <label>Measurement Unit:</label>
+            <select th:field="*{measurementUnit}" class="form-control">
+                <option th:each="unit : ${measurementUnit}"
+                        th:value="${unit}" th:text="${unit.displayUnit}">
+                </option>
+            </select>
 
-      <label for="expiryDate">Expiry date:</label>
-      <input type="date" id="expiryDate" name="expiryDate" class="form-control" th:field="*{expiryDate}" >
-      <p class="error" th:if="${#fields.hasErrors('expiryDate')}" th:errors="*{expiryDate}"></p>
+            <label for="expiryDate">Expiry date:</label>
+            <input type="date" id="expiryDate" name="expiryDate" class="form-control" th:field="*{expiryDate}">
+            <p class="error" th:if="${#fields.hasErrors('expiryDate')}" th:errors="*{expiryDate}"></p>
 
-      <label>Status:</label>
-      <select th:field="*{statusOfProduct}" class="form-control">
-        <option th:each="status : ${statusOfProduct}"
-                th:value="${status}" th:text="${status.displayStatus}">
-        </option>
-      </select>
-<!--            <p class="error" th:if="${#fields.hasErrors('statusOfProduct')}" th:errors="*{statusOfProduct}"></p>-->
+            <label>Status:</label>
+            <select th:field="*{statusOfProduct}" class="form-control">
+                <option th:each="status : ${statusOfProduct}"
+                        th:value="${status}" th:text="${status.displayStatus}">
+                </option>
+            </select>
 
-      <label for="shelf">Shelf:</label>
-      <select id="shelf" name="shelf.shelfId" class="form-control" th:field="*{shelf.shelfId}" required>
-        <option value=""></option>
-        <option th:each="shelf : ${shelves}" th:value="${shelf.shelfId}" th:text="${shelf.shelfName}"></option>
-      </select>
-      <p class="error" th:if="${#fields.hasErrors('shelf.shelfId')}" th:errors="*{shelf.shelfId}"></p>
+            <label for="shelf">Shelf:</label>
+            <select id="shelf" name="shelf.shelfId" class="form-control" th:field="*{shelf.shelfId}" required>
+                <option value=""></option>
+                <option th:each="shelf : ${shelves}" th:value="${shelf.shelfId}" th:text="${shelf.shelfName}"></option>
+            </select>
+            <p class="error" th:if="${#fields.hasErrors('shelf.shelfId')}" th:errors="*{shelf.shelfId}"></p>
 
-      <input type="hidden" id="shelfId" name="shelfId" th:value="${shelfId}" />
+            <input type="hidden" id="shelfId" name="shelfId" th:value="${shelfId}"/>
 
-      <input type="submit" value="Add product" class="btn btn-success btn-block">
+            <input type="submit" value="Add product" class="btn btn-success btn-block">
 
-    </form>
-    <br>
-    <button type="button" class="btn btn-outline-warning" onclick="goBack()">Go back</button>
+        </form>
+        <br>
+        <button type="button" class="btn btn-outline-warning" onclick="goBack()">Go back</button>
 
-
-  </div>
+    </div>
 </div>
 </body>
-
 </html>
