--- a/src/main/resources/templates/products/editProductView.html
+++ b/src/main/resources/templates/products/editProductView.html
@@ -1,72 +1,77 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>PANTRY - Edit Product</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      padding-top: 30px;
-    }
-    .container {
-      max-width: 500px;
-    }
-    label {
-      margin-top: 10px;
-    }
-    input[type="submit"] {
-      margin-top: 20px;
-    }
-    .error {
-      color: red;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>PANTRY - Edit Product</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            padding-top: 30px;
+        }
 
-  <script>
-    function goBack() {
-      window.history.back();
-    }
-  </script>
+        .container {
+            max-width: 500px;
+        }
+
+        label {
+            margin-top: 10px;
+        }
+
+        input[type="submit"] {
+            margin-top: 20px;
+        }
+
+        .error {
+            color: red;
+        }
+    </style>
+
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
 
 <body>
 <div class="container">
-  <div class="col-md-auto">
+    <div class="col-md-auto">
 
-    <h1 class="text-center mb-4">Edit Product</h1>
+        <h1 class="text-center mb-4">Edit Product</h1>
 
-    <form th:action="@{'/products/save' + '?shelfId=' + ${shelf.shelfId}}" th:object="${existingProduct}" method="post" class="form-group">
-      <input type="hidden" th:field="*{productId}">
+        <form th:action="@{'/products/save' + '?shelfId=' + ${shelf.shelfId}}" th:object="${existingProduct}"
+              method="post" class="form-group">
+            <input type="hidden" th:field="*{productId}">
 
-      <label for="productName">Product Name:</label>
-      <input type="text" id="productName" th:field="*{productName}" class="form-control" required>
+            <label for="productName">Product Name:</label>
+            <input type="text" id="productName" th:field="*{productName}" class="form-control" required>
 
-      <label for="quantityOfProduct">Quantity:</label>
-      <input type="number" id="quantityOfProduct" th:field="*{quantityOfProduct}" class="form-control" required>
+            <label for="quantityOfProduct">Quantity:</label>
+            <input type="number" id="quantityOfProduct" th:field="*{quantityOfProduct}" class="form-control" required>
 
-      <label>Measurement Unit:</label>
-      <select th:field="*{measurementUnit}" class="form-control">
-        <option th:each="unit : ${measurementUnit}"
-                th:value="${unit}" th:text="${unit.displayUnit}">
-      </option>
-      </select>
+            <label>Measurement Unit:</label>
+            <select th:field="*{measurementUnit}" class="form-control">
+                <option th:each="unit : ${measurementUnit}"
+                        th:value="${unit}" th:text="${unit.displayUnit}">
+                </option>
+            </select>
 
-      <label for="expiryDate">Expiry date:</label>
-      <input type="date" id="expiryDate" th:field="*{expiryDate}" class="form-control" >
+            <label for="expiryDate">Expiry date:</label>
+            <input type="date" id="expiryDate" th:field="*{expiryDate}" class="form-control">
 
-      <label>Status:</label>
-      <select th:field="*{statusOfProduct}" class="form-control">
-        <option th:each="status : ${statusOfProduct}"
-                th:value="${status}" th:text="${status.displayStatus}">
-        </option>
-      </select>
+            <label>Status:</label>
+            <select th:field="*{statusOfProduct}" class="form-control">
+                <option th:each="status : ${statusOfProduct}"
+                        th:value="${status}" th:text="${status.displayStatus}">
+                </option>
+            </select>
 
-      <input type="submit" value="Save" class="btn btn-primary btn-block">
-    </form>
-    <br>
-    <button type="button" class="btn btn-outline-warning" onclick="goBack()">Go back</button>
+            <input type="submit" value="Save" class="btn btn-primary btn-block">
+        </form>
+        <br>
+        <button type="button" class="btn btn-outline-warning" onclick="goBack()">Go back</button>
 
-  </div>
+    </div>
 </div>
 </body>
 </html>
