--- a/src/main/resources/templates/shelves/shelfView.html
+++ b/src/main/resources/templates/shelves/shelfView.html
@@ -18,42 +18,53 @@
     <h2 class="mt-1 mb-1" th:text="${shelf.shelfName}">Shelf Name</h2>
     <br>
     <div class="col-md-auto">
-        <a th:href="@{/addProduct(shelfId=${shelf.shelfId})}" class="btn btn-success" >Add product</a>
+        <a th:href="@{/addProduct(shelfId=${shelf.shelfId})}" class="btn btn-success">Add product</a>
 
-        <a th:href="@{/shelves}" class="btn btn-outline-warning" >Back to Shelves</a>
+        <a th:href="@{/shelves}" class="btn btn-outline-warning">Back to Shelves</a>
         <br><br>
         <table class="table table-striped">
             <thead class="thead-dark">
             <tr>
-                <th scope="col"><button onclick="sort('productName')">Product Name ↑↓</button></th>
-                <th scope="col"><button onclick="sort('quantityOfProduct')">Quantity ↑↓</button></th>
-                <th scope="col"><button onclick="sort('measurementUnit')">Measurement Unit ↑↓</button></th>
-                <th scope="col"><button onclick="sort('expiryDate')">Expiry Date ↑↓</button></th>
-                <th scope="col"><button onclick="sort('statusOfProduct')">Status ↑↓</button></th>
+                <th scope="col">
+                    <button onclick="sort('productName')">Product Name ↑↓</button>
+                </th>
+                <th scope="col">
+                    <button onclick="sort('quantityOfProduct')">Quantity ↑↓</button>
+                </th>
+                <th scope="col">
+                    <button onclick="sort('measurementUnit')">Measurement Unit ↑↓</button>
+                </th>
+                <th scope="col">
+                    <button onclick="sort('expiryDate')">Expiry Date ↑↓</button>
+                </th>
+                <th scope="col">
+                    <button onclick="sort('statusOfProduct')">Status ↑↓</button>
+                </th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="product: ${products}">
-                <td th:text="${product.getProductName()}" />
-                <td th:text="${product.getQuantityOfProduct()}" />
+                <td th:text="${product.getProductName()}"/>
+                <td th:text="${product.getQuantityOfProduct()}"/>
                 <td th:text="${product.getMeasurementUnit().getDisplayUnit()}"></td>
-                <td th:text="${product.getExpiryDate()}" />
-                <td th:text="${product.getStatusOfProduct.getDisplayStatus()}" />
+                <td th:text="${product.getExpiryDate()}"/>
+                <td th:text="${product.getStatusOfProduct.getDisplayStatus()}"/>
 
-                <td><form th:action="@{'/deleteProduct/' + ${product.getProductId()} + '?shelfId=' + ${shelf.shelfId}}"  method="post" onsubmit="return deleteConfirm()">
-                    <input type="submit" class="btn btn-danger btn-sm" value="Delete product"/>
-                </form>
+                <td>
+                    <form th:action="@{'/deleteProduct/' + ${product.getProductId()} + '?shelfId=' + ${shelf.shelfId}}"
+                          method="post" onsubmit="return deleteConfirm()">
+                        <input type="submit" class="btn btn-danger btn-sm" value="Delete product"/>
+                    </form>
 
-                    <a th:href="@{'/edit/' + ${product.productId} + '?shelfId=' + ${shelf.shelfId}}" class="btn btn-primary btn-sm">Edit product
+                    <a th:href="@{'/edit/' + ${product.productId} + '?shelfId=' + ${shelf.shelfId}}"
+                       class="btn btn-primary btn-sm">Edit product
                     </a>
             </tr>
             </tbody>
         </table>
-
     </div>
 </div>
 
-<!-- Skrypt JavaScript do obsługi sortowania -->
 <script type="text/javascript">
     function sort(sortField) {
         var currentUrl = new URL(window.location.href);
