--- a/src/main/resources/templates/shoppingList/addProductToShoppingListView.html
+++ b/src/main/resources/templates/shoppingList/addProductToShoppingListView.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>PANTRY - Add product to shopping list</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      padding-top: 30px;
-    }
-    .container {
-      max-width: 500px;
-    }
-    label {
-      margin-top: 10px;
-    }
-    input[type="submit"] {
-      margin-top: 20px;
-    }
-    .error {
-      color: red;
-    }
-  </style>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>PANTRY - Add product to shopping list</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            padding-top: 30px;
+        }
+
+        .container {
+            max-width: 500px;
+        }
+
+        label {
+            margin-top: 10px;
+        }
+
+        input[type="submit"] {
+            margin-top: 20px;
+        }
+
+        .error {
+            color: red;
+        }
+    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 <div class="container">
-  <div class="col-md-auto">
+    <div class="col-md-auto">
 
-    <h1 class="text-center mb-4">Add Product to Shopping List:</h1>
+        <h1 class="text-center mb-4">Add Product to Shopping List:</h1>
 
-    <form th:action="@{/addProductSL}" th:object="${shoppingItem}" method="post" class="form-group">
+        <form th:action="@{/addProductSL}" th:object="${shoppingItem}" method="post" class="form-group">
 
-      <label for="itemName">Product Name:</label>
-      <select id="itemName" name="itemName" required class="form-control">
-        <option value=""></option>
-        <option th:each="product : ${products}" th:value="${product.productName}" th:text="${product.productName}"></option>
-      </select>
+            <label for="itemName">Product Name:</label>
+            <select id="itemName" name="itemName" required class="form-control">
+                <option value=""></option>
+                <option th:each="product : ${products}" th:value="${product.productName}"
+                        th:text="${product.productName}"></option>
+            </select>
 
+            <label for="itemQuantity">Quantity:</label>
+            <input type="number" id="itemQuantity" name="itemQuantity" min="1" class="form-control" required>
 
-      <label for="itemQuantity">Quantity:</label>
-      <input type="number" id="itemQuantity" name="itemQuantity" min="1" class="form-control" required>
+            <label>Measurement Unit:</label>
+            <select th:field="*{measurementUnit}" class="form-control">
+                <option th:each="unit : ${measurementUnit}"
+                        th:value="${unit}" th:text="${unit.displayUnit}">
+                </option>
+            </select>
 
+            <input type="submit" value="Add product" class="btn btn-success btn-block">
 
-      <label>Measurement Unit:</label>
-      <select th:field="*{measurementUnit}" class="form-control">
-        <option th:each="unit : ${measurementUnit}"
-                th:value="${unit}" th:text="${unit.displayUnit}">
-        </option>
-      </select>
-
-
-      <input type="submit" value="Add product" class="btn btn-success btn-block">
-
-    </form>
-    <br>
-    <a th:href="@{/shoppingList}" class="btn btn-outline-warning" >Back to shopping list</a>
-  </div>
+        </form>
+        <br>
+        <a th:href="@{/shoppingList}" class="btn btn-outline-warning">Back to shopping list</a>
+    </div>
 </div>
 </body>
 </html>
